--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -31,6 +31,7 @@ include::documentation-overview.adoc[]
 include::getting-started.adoc[]
 include::upgrading.adoc[]
 include::maintenance.adoc[]
+include::known-issues.adoc[]
 include::appendix.adoc[]
 
 // ======================================================================================
