--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -39,6 +39,9 @@ part of the upgrade process.
 | `com.rometools:rome-fetcher`
 | No longer a direct dependency of any of the Platform's projects
 
+| `com.squareup.okhttp:okhttp`
+|  No longer a direct dependency of any of the Platform's projects
+
 | `io.projectreactor.spring:reactor-spring-context`
 | Does not exist in the version of Reactor that is now used by the Platform
 
