--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -24,6 +24,9 @@ part of the upgrade process.
 |===
 |Dependency | Explanation
 
+| `commons-dbcp:commons-dbcp`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.esotericsoftware:kryo`
 | No longer a direct dependency of any of the Platform's projects
 
@@ -41,6 +44,9 @@ part of the upgrade process.
 
 | `com.squareup.okhttp:okhttp`
 |  No longer a direct dependency of any of the Platform's projects
+
+| `com.zaxxer:HikariCP-java6`
+| The Platform now requires Java 8
 
 | `io.projectreactor.spring:reactor-spring-context`
 | Does not exist in the version of Reactor that is now used by the Platform
