Align with latest Spring Boot 2.0 snapshots

--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -39,6 +39,9 @@ part of the upgrade process.
 | `com.goldmansachs:gs-collections`
 | No longer a direct dependency of any of the Platform's projects
 
+| `com.google.code.findbugs:annotations`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.rometools:rome-fetcher`
 | No longer a direct dependency of any of the Platform's projects
 
