--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -138,6 +138,9 @@ part of the upgrade process.
 | `org.crashub:crash.shell`
 | No longer a direct dependency of any of the Platform's projects
 
+| `org.apache.ibatis:ibatis-sqlmap`
+| No longer a direct dependency of any of the Platform's projects
+
 | `org.jredis:jredis-core-api`
 | No longer a direct dependency of any of the Platform's projects
 
