--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -114,6 +114,9 @@ part of the upgrade process.
 | `org.apache.velocity:velocity`
 | No longer a direct dependency of any of the Platform's projects
 
+| `org.apache.ws.security:wss4j`
+| No longer a direct dependency of any of the Platform's projects
+
 | `org.apache.xmlbeans:xmlbeans`
 | No longer a direct dependency of any of the Platform's projects
 
