--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -120,6 +120,9 @@ part of the upgrade process.
 | `org.apache.xmlbeans:xmlbeans`
 | No longer a direct dependency of any of the Platform's projects
 
+| `org.codehaus.woodstox:woodstox-core-asl`
+| No longer a direct dependency of any of the Platform's projects
+
 | `org.crashub:crash.cli`
 | No longer a direct dependency of any of the Platform's projects
 
