--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -27,6 +27,9 @@ part of the upgrade process.
 | `commons-dbcp:commons-dbcp`
 | No longer a direct dependency of any of the Platform's projects
 
+| `commons-digester:commons-digester`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.esotericsoftware:kryo`
 | No longer a direct dependency of any of the Platform's projects
 
