--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -96,6 +96,9 @@ part of the upgrade process.
 | `javax.resource:connector-api`
 | No longer a direct dependency of any of the Platform's projects
 
+| `log4j:log4j`
+| No longer a direct dependency of any of the Platform's projects
+
 | `net.openhft:chronicle`
 | No longer a direct dependency of any of the Platform's projects
 
