--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -48,6 +48,9 @@ part of the upgrade process.
 | `com.jayway.restassured:rest-assured`
 | No longer a direct dependency of any of the Platform's projects
 
+| `com.lowagie:itext`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.rometools:rome-fetcher`
 | No longer a direct dependency of any of the Platform's projects
 
