--- a/platform/src/main/asciidoc/upgrading.adoc
+++ b/platform/src/main/asciidoc/upgrading.adoc
@@ -54,6 +54,9 @@ part of the upgrade process.
 | `com.rometools:rome-fetcher`
 | No longer a direct dependency of any of the Platform's projects
 
+| `com.splunk:splunk`
+| No longer a direct dependency of any of the Platform's projects
+
 | `com.squareup.okhttp:okhttp`
 |  No longer a direct dependency of any of the Platform's projects
 
