--- a/platform/src/main/asciidoc/index.adoc
+++ b/platform/src/main/asciidoc/index.adoc
@@ -11,17 +11,17 @@ Andy Wilkinson;
 :dependency-management-plugin: https://plugins.gradle.org/plugin/io.spring.dependency-management
 :dependency-management-plugin-version: 1.0.0.RELEASE
 :platform-docs-version: current
-:platform-docs: http://docs.spring.io/platform/docs/{platform-docs-version}/reference
-:platform-docs-current: http://docs.spring.io/platform/docs/current/reference
-:platform-docs-20x: http://docs.spring.io/platform/docs/2.0.x/reference
+:platform-docs: https://docs.spring.io/platform/docs/{platform-docs-version}/reference
+:platform-docs-current: https://docs.spring.io/platform/docs/current/reference
+:platform-docs-20x: https://docs.spring.io/platform/docs/2.0.x/reference
 :github-repo: spring-io/platform
-:github-raw: http://raw.github.com/{github-repo}/{github-tag}
-:github-code: http://github.com/{github-repo}/tree/{github-tag}
+:github-raw: https://raw.github.com/{github-repo}/{github-tag}
+:github-code: https://github.com/{github-repo}/tree/{github-tag}
 :github-issues: https://github.com/{github-repo}/issues
-:github-master-code: http://github.com/{github-repo}/tree/master
-:maven-dependency-management: http://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Dependency_Management
-:spring-boot: http://projects.spring.io/spring-boot
-:spring-boot-docs: http://docs.spring.io/spring-boot/docs/{spring-boot-version}/reference/htmlsingle
+:github-master-code: https://github.com/{github-repo}/tree/master
+:maven-dependency-management: https://maven.apache.org/guides/introduction/introduction-to-dependency-mechanism.html#Dependency_Management
+:spring-boot: https://projects.spring.io/spring-boot
+:spring-boot-docs: https://docs.spring.io/spring-boot/docs/{spring-boot-version}/reference/htmlsingle
 :spring-boot-docs-maven: {spring-boot-docs}/#using-boot-maven
 :spring-boot-docs-maven-plugin: {spring-boot-docs}/#build-tool-plugins-maven-plugin
 
